maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:76: error: illegal start of simple expression
	}
        ^